2001-12-07  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileCopy.h: (RemoveTargetFirst) new method; do it.
	* MirrorJob.cc, MirrorJob.h: use RemoveTargetFirst; mirror -P
	  works again; fix NULL dereference in PrintStatus; don't derive
	  from SessionJob - use source_session member instead;
	  do mkdir in child mirror; new Statistics struct; add statistics
	  to parent mirror in child mirror's dtor.
	* TimeDate.h: rearrange inline functions to help compiler.

2001-12-05  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc: improve GenericParseListInfo status.
	* buffer.cc, buffer.h: allow a Speedometer to be associated with
	  Buffer class.

2001-12-05  Glenn Maynard <g_ld@zewt.org>

	* FileSetOutput.cc, FileSetOutput.h: Add Suspend(), Resume(), Fg(), Bg().
	* QueueFeeder.cc: remove _GNU_SOURCE.

2001-12-05  Alexander V. Lukyanov <lav@yars.free.net>

	* LsCache.cc: use alloca in IsDirectory; style.
	* MirrorJob.cc: fix eprintf calls - double parent led to NULL.

2001-12-05  Glenn Maynard <g_ld@zewt.org>

	* GetFileInfo.cc: use LsCache::IsDirectory.
	* LsCache.cc, LsCache.h: implement LsCache::IsDirectory.

2001-12-05  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.h: (ParseLongList) new virtual method.
	* NetAccess.h: call session->ParseLongList by default from
	  GenericParseListInfo.
	* FtpListInfo.cc, FtpListInfo.h, ftpclass.h: move parser to Ftp class.

2001-12-05  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.h: include Glob.h.
	* DummyProto.h, DummyProto.cc: little optimization; new MakeListInfo.
	* FileAccess.cc, FileAccess.h: ListInfo takes path; move Glob to
	  separate file.
	* Glob.cc, Glob.h: new files; new GenericGlob class uses ListInfo.
	* FileSet.cc, FileSet.h: fix date copying; remove unused method.
	* mgetJob.cc, FileSetOutput.cc: include Glob.h.
	* Fish.cc, Fish.h: use GenericGlob; new ListInfo ctor.
	* FtpListInfo.h: new ListInfo ctor.
	* GetFileInfo.cc, GetFileInfo.h: new ListInfo ctor; path renamed.